namespace DDDNetCore.Application.DTO;

public class SpecializationDto
{
    public string SpecializationCode { get; set; }
    public string SpecializationDesignation { get; set; }
    public string SpecializationDescription { get; set; }
}